--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- main section -->
 
     <main>
-        <div class="flex flex-col justify-between items-center md:items-end mt-12 mb-8 gap-2">    
+        <div class="flex justify-between items-center  mt-12 mb-8 gap-2">    
             <div>
                 <h2 class="text-2xl font-bold text-[#002C5C]">Available Jobs</h2>
             </div>
